--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
       href="%PUBLIC_URL%/assets/bootstrap.min.css"
     ></style> -->
     <style rel="stylesheet" href="%PUBLIC_URL%/assets/style.css"></style>
+    <style rel="stylesheet" href="%PUBLIC_URL%/assets/responsive.css"></style>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
