--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://apis.google.com/js/api.js"></script>
+    <script src="https://accounts.google.com/gsi/client"></script>
 
     <!--
       This HTML file is a template.
