--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
-    <meta name="theme-color" content="#ffffff" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link rel="icon" href="favicon.ico" />
+    <meta name="theme-color" content="#ffc200" />
+    <!-- <link rel="manifest" href="assets/manifest.json" /> -->
     <!-- <style
       rel="stylesheet"
       href="%PUBLIC_URL%/assets/bootstrap.min.css"
     ></style> -->
-    <style rel="stylesheet" href="%PUBLIC_URL%/assets/style.css"></style>
+    <!-- <style rel="stylesheet" href="%PUBLIC_URL%/assets/style.css"></style> -->
     <style rel="stylesheet" href="%PUBLIC_URL%/assets/responsive.css"></style>
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -33,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>JCB</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
